# tsfracdiff

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report-template.md  feature-request-template.md
.github/workflows/: tsfracdiff_tests.yml
docs/: index.html  tsfracdiff.html  unit_root_tests.html
docs/tsfracdiff/: index.html  unit_root_tests.html
examples/: Example.html  Example.ipynb
tests/: test_module.py
tsfracdiff/: __init__.py  tsfracdiff.py  unit_root_tests.py
